--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
 <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-<title>Hubble30</title>
+<title>Hubble30 — What did Hubble see on your birthday?</title>
 </head>
 <body>
 <noscript>Please enable JavaScript.</noscript>
