Add resource hints

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
 <meta name="theme-color" content="#000000" />
 <meta name="description" content="What did Hubble see on your birthday?" />
 <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400;700&display=swap" rel="stylesheet">
+
+<link rel="dns-prefetch" href="https://imagine.gsfc.nasa.gov" />
+<link rel="preconnect" href="https://imagine.gsfc.nasa.gov" />
+<link rel="preconnect" href="https://imagine.gsfc.nasa.gov" crossOrigin="true" />
+
 <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 <title>Hubble30 — What did Hubble see on your birthday?</title>
