--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,14 @@
 <meta name="theme-color" content="#0b3d91" />
 <meta name="description" content="What did Hubble see on your birthday?" />
 
-<link rel="dns-prefetch" href="https://fonts.googleapis.com">
-<link rel="dns-prefetch" href="https://fonts.gstatic.com">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel="preload" href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-<noscript><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet"></noscript>
+<link rel="dns-prefetch" href="https://fonts.bunny.net">
+<link rel="preconnect" href="https://fonts.bunny.net">
+<link rel="preload" href="https://fonts.bunny.net/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link href="https://fonts.bunny.net/css2?family=IBM+Plex+Sans:wght@400;700&display=swap" rel="stylesheet"></noscript>
 
 <link rel="dns-prefetch" href="https://imagine.gsfc.nasa.gov" />
 <link rel="preconnect" href="https://imagine.gsfc.nasa.gov" />
-<link rel="preconnect" href="https://imagine.gsfc.nasa.gov" crossOrigin="true" />
+<link rel="preconnect" href="https://imagine.gsfc.nasa.gov" crossorigin />
 
 <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
